# Character-Cookbook

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: README.md  campaign_manager.cpp  campaign_manager.h  character.cpp  character.h  gui.cpp  gui.h  json_utils.cpp  json_utils.h  main.cpp
src/Bookshelf/: README.md
src/CharacterCreator/: CharacterCreator.cpp  CharacterCreator.h  CharacterSheets.json  README.md  pomm2test.cpp
src/Libraries/: README.md
